--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -23,7 +23,7 @@ email: johnswift@live.com
 description: >- # this means to ignore newlines until "baseurl:"
   Hello! I am a highschool senior and hobbyist developer!
   Feel free to check out some of my highlighted projects and posts! 🤓
-baseurl: /blog/ # the subpath of your site, e.g. /blog
+baseurl: / # the subpath of your site, e.g. /blog
 url: https://JohnSwiftC.github.io # the base hostname & protocol for your site, e.g. http://example.com
 domain: JohnSwiftC.github.io
 github_username:  JohnSwiftC
