--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: John Swift
+title: John's Blog
 email: johnswift@live.com
 description: >- # this means to ignore newlines until "baseurl:"
   Hello! I am a highschool senior and hobbyist developer!
