--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,7 @@
 
 title: John's Blog
 description: >- # this means to ignore newlines until "baseurl:"
-  Hello! I am a highschool senior and hobbyist developer!
-  Feel free to check out some of my highlighted projects and posts! 🤓
+  Having fun
 baseurl: / # the subpath of your site, e.g. /blog
 url: https://JohnSwiftC.github.io # the base hostname & protocol for your site, e.g. http://example.com
 domain: JohnSwiftC.github.io
